--- a/AdvancedCPPLearning/AdvancedCPPLearning/AdvancedCPPLearning.vcxproj.filters
+++ b/AdvancedCPPLearning/AdvancedCPPLearning/AdvancedCPPLearning.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="threadtest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="STLtest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="threadtest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="STLtest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
