Graph implementation; added simple linear linked list

--- a/AdvancedCPPLearning/AdvancedCPPLearning/AdvancedCPPLearning.vcxproj
+++ b/AdvancedCPPLearning/AdvancedCPPLearning/AdvancedCPPLearning.vcxproj
@@ -110,11 +110,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="linearlinkedlist.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="graph.cpp" />
     <ClCompile Include="threadtest.cpp" />
     <ClCompile Include="STLtest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="graph.h" />
+    <ClInclude Include="linearlinkedlist.h" />
     <ClInclude Include="STLtest.h" />
     <ClInclude Include="threadtest.h" />
   </ItemGroup>
